// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Privacy /> should match existing snapshot 1`] = `
<DocumentFragment>
  <article
    class="pf-c-card pf-m-rounded"
    data-ouia-component-id="OUIA-Generated-Card-1"
    data-ouia-component-type="PF4/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-c-card__title"
    >
      <p
        class=""
        data-pf-content="true"
      >
        Privacy
      </p>
      <div
        class="pf-c-content"
      >
        <small
          class=""
          data-pf-content="true"
        >
          Covid-19 and VCS Privacy Notice is available on The Source. Please review the link below for more information on how Red Hat collects, uses, stores, transfers, and otherwise processes personal information about you in connection with COVID-19 and the validation check-in system (VCS) for Red Hat.
        </small>
      </div>
    </div>
    <div
      class="pf-c-card__body"
    >
      <a
        aria-disabled="false"
        class="pf-c-button pf-m-link"
        data-ouia-component-id="OUIA-Generated-Button-link-1"
        data-ouia-component-type="PF4/Button"
        data-ouia-safe="true"
        href="https://source.redhat.com/departments/legal/globallegalcompliance/compliance_folder/vcs_privacy_notice_for_red_hat_globalpdf"
        target="_blank"
      >
        <span
          class="pf-c-button__icon pf-m-start"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 512 512"
            width="1em"
          >
            <path
              d="M432,320H400a16,16,0,0,0-16,16V448H64V128H208a16,16,0,0,0,16-16V80a16,16,0,0,0-16-16H48A48,48,0,0,0,0,112V464a48,48,0,0,0,48,48H400a48,48,0,0,0,48-48V336A16,16,0,0,0,432,320ZM488,0h-128c-21.37,0-32.05,25.91-17,41l35.73,35.73L135,320.37a24,24,0,0,0,0,34L157.67,377a24,24,0,0,0,34,0L435.28,133.32,471,169c15,15,41,4.5,41-17V24A24,24,0,0,0,488,0Z"
            />
          </svg>
        </span>
        Covid-19 and VCS Privacy Notice for Red Hat
      </a>
    </div>
    <div
      class="pf-c-card__footer"
    >
      <button
        aria-disabled="false"
        class="pf-c-button pf-m-plain"
        data-ouia-component-id="OUIA-Generated-Button-plain-1"
        data-ouia-component-type="PF4/Button"
        data-ouia-safe="true"
        type="button"
      >
        Back
      </button>
    </div>
  </article>
</DocumentFragment>
`;

exports[`<Privacy /> should match existing snapshot 2`] = `
<DocumentFragment>
  <article
    class="pf-c-card pf-m-rounded"
    data-ouia-component-id="OUIA-Generated-Card-2"
    data-ouia-component-type="PF4/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-c-card__title"
    >
      <p
        class=""
        data-pf-content="true"
      >
        Privacy
      </p>
      <div
        class="pf-c-content"
      >
        <small
          class=""
          data-pf-content="true"
        >
          Covid-19 and VCS Privacy Notice is available on The Source. Please review the link below for more information on how Red Hat collects, uses, stores, transfers, and otherwise processes personal information about you in connection with COVID-19 and the validation check-in system (VCS) for Red Hat.
        </small>
      </div>
    </div>
    <div
      class="pf-c-card__body"
    >
      <a
        aria-disabled="false"
        class="pf-c-button pf-m-link"
        data-ouia-component-id="OUIA-Generated-Button-link-2"
        data-ouia-component-type="PF4/Button"
        data-ouia-safe="true"
        href="https://source.redhat.com/departments/legal/globallegalcompliance/compliance_folder/vcs_privacy_notice_for_red_hat_globalpdf"
        target="_blank"
      >
        <span
          class="pf-c-button__icon pf-m-start"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 512 512"
            width="1em"
          >
            <path
              d="M432,320H400a16,16,0,0,0-16,16V448H64V128H208a16,16,0,0,0,16-16V80a16,16,0,0,0-16-16H48A48,48,0,0,0,0,112V464a48,48,0,0,0,48,48H400a48,48,0,0,0,48-48V336A16,16,0,0,0,432,320ZM488,0h-128c-21.37,0-32.05,25.91-17,41l35.73,35.73L135,320.37a24,24,0,0,0,0,34L157.67,377a24,24,0,0,0,34,0L435.28,133.32,471,169c15,15,41,4.5,41-17V24A24,24,0,0,0,488,0Z"
            />
          </svg>
        </span>
        Covid-19 and VCS Privacy Notice for Red Hat
      </a>
    </div>
    <div
      class="pf-c-card__footer"
    >
      <button
        aria-disabled="false"
        class="pf-c-button pf-m-plain"
        data-ouia-component-id="OUIA-Generated-Button-plain-2"
        data-ouia-component-type="PF4/Button"
        data-ouia-safe="true"
        type="button"
      >
        Back
      </button>
    </div>
  </article>
</DocumentFragment>
`;
